<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.fluffici.dashy.ui.activities.auth.LoginActivity"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:text="@string/welcome_back"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:textColor="@color/colorTextWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/we_missed_you_login_to_get_started"
                android:fontFamily="@font/seg_ui_semibold"
                android:textColor="@color/colorTextWhite"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:elevation="36dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextBlack"
            android:textSize="26sp"
            android:text="@string/logins"
            android:fontFamily="@font/seg_ui_semibold"
            android:layout_marginTop="36dp"
            android:layout_marginStart="48dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <EditText
                android:id="@+id/email"
                android:textColorHint="@color/colorPlaceholder"
                android:drawableEnd="@drawable/users_svg"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/john_smith_fluffici_eu"
                android:textColor="@color/colorTextBlack"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/seg_ui_semibold"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"/>
            <EditText
                android:id="@+id/password"
                android:textColorHint="@color/colorPlaceholder"
                android:layout_marginTop="24dp"
                android:drawableEnd="@drawable/lock_access_svg"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/passwords"
                android:textColor="@color/colorTextBlack"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:inputType="textPassword"
                android:fontFamily="@font/seg_ui_semibold"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"/>

            <CheckBox
                android:id="@+id/rememberme"
                android:button="@drawable/checkbox"
                android:buttonTint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/seg_ui_semibold"
                android:text="@string/remember_me"
                android:textColor="@color/colorTextBlack"
                android:checked="false"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp">
                <TextView
                    android:id="@+id/help"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="18sp"
                    android:text="@string/need_help"
                    android:fontFamily="@font/seg_ui_semibold"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/colorButtonText"
                    android:textSize="16sp"
                    android:fontFamily="@font/seg_ui_semibold"
                    android:background="@drawable/button_background"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>